# popcorn-cli

./: Cargo.toml
migrations/2019-04-30-063117_create_writers/: up.sql
migrations/2019-04-30-063211_create_directors/: up.sql
migrations/2019-04-30-063347_create_artists/: up.sql
migrations/2019-04-30-063447_create_movies/: up.sql
src/: args.yml  main.rs  output.rs  types.rs
src/db/: mod.rs  models.rs  utils.rs
src/db/raw/: cast_add.sql  cast_query.sql  movies_add-artists.sql  movies_add-directors.sql  movies_add-writers.sql  movies_add.sql  writers_query.sql
src/types/: candidates.rs  mod.rs
