[package]
name = "popcorn-cli"
version = "0.1.0"
authors = ["ryakosh <ryakosh@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.2", features = ["postgres"] }
clap = { version = "2.33.0", features = ["yaml"] }
serde = { version = "1.0.90", features = ['derive'] }
serde_json = "1.0.39"